# matrix

./: CMakeLists.txt  README.md  matrix.hpp
include/: matrix.hpp
src/: CMakeLists.txt  determinant.cpp
tests/: CMakeLists.txt  tests.cpp
tests/end-to-end-tests/: CMakeLists.txt  generator.cpp  generator.hpp  run_e2e_tests.py
tests/unit-tests/: CMakeLists.txt  tests.cpp
